--- a/3. CSS Grid/03_15_Challenge/styles.css
+++ b/3. CSS Grid/03_15_Challenge/styles.css
@@ -13,6 +13,10 @@ img {
 	margin: 30px;
 	width: 600px;
 	font-size: 4em;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+	
 }
 .container>* {
 	border: 1px solid black;
@@ -20,25 +24,41 @@ img {
 }
 .red {
 	background-color: red;
+	grid-column: 2/6;
+	grid-row: 1;
 }
 .orange {
 	background-color: orange;
+	grid-column: 1/2;
+	grid-row: 2/6;
 }
 .yellow {
 	background-color: yellow;
+	grid-column: 2/4;
+	grid-row: 2/5;
 }
 .green {
 	background-color: green;
+	grid-column: 4/6;
+	grid-row: 2;
 }
 .blue {
 	background-color: blue;
+	grid-column: 2/6;
+	grid-row: 5/6;
 }
 .purple {
 	background-color: purple;
+	grid-column: 6/7;
+	grid-row: 1/6;
 }
 .gray {
 	background-color: gray;
+	grid-column: 4/6;
+	grid-row: 3/5;
 }
 .white {
 	background-color: white;
+	grid-column: 1;
+	grid-row: 1;
 }
